--- a/src/modules/pages/exhibitionListingPage/exhibition_page.module.scss
+++ b/src/modules/pages/exhibitionListingPage/exhibition_page.module.scss
@@ -2,7 +2,7 @@
 
 .exhibition_page_container {
   .content_container {
-    overflow: scroll;
+    overflow: auto;
     padding: 25px 50px 0px;
 
     .item {
