--- a/src/modules/pages/homePage/homepage.module.scss
+++ b/src/modules/pages/homePage/homepage.module.scss
@@ -5,7 +5,7 @@
   flex: 1;
   align-self: stretch;
   padding: 34px;
-  overflow: scroll;
+  overflow: auto;
 
   .box_container {
     align-self: stretch;
