--- a/src/modules/pages/orderDetailsPage/order_details.module.scss
+++ b/src/modules/pages/orderDetailsPage/order_details.module.scss
@@ -1,7 +1,7 @@
 @import "~Styles/colors.module";
 
 .order_page_container {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .header {
