--- a/src/modules/pages/profileDetails/profile_details.module.scss
+++ b/src/modules/pages/profileDetails/profile_details.module.scss
@@ -1,5 +1,5 @@
-@import '~Styles/colors.module';
-@import '~Styles/mixins.module';
+@import "~Styles/colors.module";
+@import "~Styles/mixins.module";
 
 .rtl {
   .field_container {
@@ -14,12 +14,12 @@
 }
 
 .details_container {
-  overflow: scroll;
+  overflow: auto;
 
   .header_button_container {
     .reset_password_button {
       margin-right: 16px;
-    }  
+    }
   }
 
   .field_container:first-child {
@@ -46,16 +46,15 @@
   }
 }
 
-
 @include medium {
-  .details_container {  
+  .details_container {
     .field_container {
       padding: 15px 35px;
-  
+
       .title {
         font-size: 16px;
       }
-  
+
       .value {
         font-size: 16px;
       }
@@ -67,8 +66,8 @@
   .details_container {
     .header_button_container {
       flex-direction: column;
-      
-      .reset_password_button{
+
+      .reset_password_button {
         margin-right: 0px;
       }
 
@@ -76,14 +75,14 @@
         margin-bottom: 10px;
       }
     }
-  
+
     .field_container {
       padding: 13px 30px;
-  
+
       .title {
         font-size: 14px;
       }
-  
+
       .value {
         font-size: 14px;
       }
